--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,10 @@
 language: ruby
+sudo: false
 cache: bundler
-
 rvm:
-- 2.0.0
-- 2.1.0
-- 2.1.3
 
-os: osx
-osx_image: xcode9.4
+- 2.1.5
 
-# deploy:
-#   provider: rubygems
-#   api_key:
-#     secure: KcBpkFaes74KGMm8X/rRA8e13+t3PmkefsAvOAR+iF4g1GyuLSPkP92Fb9vFfsXBph+qmFh5rNa2lIRf/3RXW6COxY7CMMaARxUfJOKE0rmIwF0qfKI+RZDh6abg92iYngunMZVN8WVft6Lv9ZTOYCWxr1Zs1Ll/Rl4PfvHNd1g=
-#   gem: travis
-#   on:
-#     repo: travis-ci/travis.rb
-#     ruby: 2.0.0
-#     condition: "$(uname) = Linux"
+os:
+- linux
+- osx
